--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,6 +18,8 @@ dependencies:
   path_provider: ^2.0.14
   google_fonts: ^6.2.1
   shared_preferences: ^2.3.3
+  auto_size_text: ^3.0.0
+  firebase_core: ^3.8.1
 
 dev_dependencies:
   flutter_test:
