--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,6 +20,8 @@ dependencies:
   shared_preferences: ^2.3.3
   auto_size_text: ^3.0.0
   firebase_core: ^3.8.1
+  cloud_firestore: ^5.5.1
+  firebase_auth: ^5.3.4
 
 dev_dependencies:
   flutter_test:
