--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,37 @@ dev_dependencies:
     sdk: flutter
 
   flutter_lints: ^5.0.0
+  flutter_launcher_icons: ^0.14.2
+  flutter_native_splash: ^2.4.3
 
 flutter:
   uses-material-design: true
+
+flutter_native_splash:
+  color: "#FFFFFF"
+  image: assets/icons/primary/calibrate.png
+
+flutter_launcher_icons:
+  image_path: "assets/icons/primary/calibrateFull.png"
+
+  android: "launcher_icon"
+  min_sdk_android: 21
+
+  ios: true
+  remove_alpha_ios: true
+  image_path_ios_dark_transparent: "assets/icons/primary/calibrateFullDark.png"
+
+  web:
+    generate: true
+    image_path: "assets/icons/primary/calibrate.png"
+    background_color: "#hexcode"
+    theme_color: "#hexcode"
+
+  windows:
+    generate: true
+    image_path: "assets/icons/primary/calibrate.png"
+    icon_size: 48
+
+  macos:
+    generate: true
+    image_path: "assets/icons/primary/calibrate.png"
