--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -22,6 +22,7 @@ dependencies:
   firebase_core: ^3.8.1
   cloud_firestore: ^5.5.1
   firebase_auth: ^5.3.4
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
